iac_tf/modules/security_groups/main.tf
resource "aws_security_group" "app_sg" {
  vpc_id      = var.vpc_id
  description = "Allow traffic to the application"

  ingress {
    from_port   = var.app_port
    to_port     = var.app_port
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Allow SSH access to the application server
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"] # Adjust to your IP range for security
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "AppSecurityGroup"
  }
}

resource "aws_security_group" "monitoring_sg" {
  vpc_id      = var.vpc_id
  description = "Allow traffic to the monitoring server"

  ingress {
    from_port   = 9090
    to_port     = 9090
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Allow SSH access to the monitoring server
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"] # Adjust to your IP range for security
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "MonitoringSecurityGroup"
  }
}

output "app_sg_id" {
  value = aws_security_group.app_sg.id
}

output "monitoring_sg_id" {
  value = aws_security_group.monitoring_sg.id
}
